fix(system): 修复 RolePermissionChangedEvent 构造器参数类型错误